[package]
name = "noob_bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# learn on bevy cheatbook

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
# Dynamic linking for faster compile-times
bevy = { version = "0.8.0", default-features = false, features = [
  "dynamic",
  "animation",
  "bevy_asset",
  "bevy_scene",
  "bevy_winit",
  "render",
  "png",
  "x11",
  "filesystem_watcher",
] }
bevy-inspector-egui = "0.12.1"
bevy_kira_audio = { version = "0.12.0", features = ["ogg", "wav"] }
rand = "*"
